--- a/index.html
+++ b/index.html
@@ -9,7 +9,21 @@
 	<script type="text/javascript" src="bower_components/angular/angular.min.js"></script>
 </head>
 <body>
-	<input type="text" ng-model="name">
-	<h2>Welcome {{name}}</h2>
+
+	<div ng-controller="MyController">
+		<h1>{{author.name}}</h1>
+		<p>{{author.title + ', ' + author.company }}</p>
+	</div>
+
+	<script type="text/javascript">
+
+	function MyController($scope) {
+		$scope.author = {
+			'name' : 'Nir Moav',
+			'title': 'Software Engineer',
+			'company': "Wix"
+		}
+	}	
+	</script>
 </body>
 </html>
