creating a module and working with a controllers file.

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" ng-app>
+<html lang="en" ng-app='myApp'>
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,6 +7,7 @@
 	<link rel="stylesheet" href="">
 
 	<script type="text/javascript" src="bower_components/angular/angular.min.js"></script>
+	<script type="text/javascript" src="js/controllers.js"></script>
 </head>
 <body>
 
@@ -14,16 +15,5 @@
 		<h1>{{author.name}}</h1>
 		<p>{{author.title + ', ' + author.company }}</p>
 	</div>
-
-	<script type="text/javascript">
-
-	function MyController($scope) {
-		$scope.author = {
-			'name' : 'Nir Moav',
-			'title': 'Software Engineer',
-			'company': "Wix"
-		}
-	}	
-	</script>
 </body>
 </html>
