--- a/index.html
+++ b/index.html
@@ -4,16 +4,23 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>Angular Demo</title>
-	<link rel="stylesheet" href="">
+	<link rel="stylesheet" href="css/style.css">
 
 	<script type="text/javascript" src="bower_components/angular/angular.min.js"></script>
 	<script type="text/javascript" src="js/controllers.js"></script>
 </head>
 <body>
 
-	<div ng-controller="MyController">
-		<h1>{{author.name}}</h1>
-		<p>{{author.title + ', ' + author.company }}</p>
+	<div class="main" ng-controller="MyController">
+		<ul class="artistlist">
+			<li class="artist cf" ng-repeat="item in artists">
+				<img ng-src="images/{{item.shortname}}_tn.jpg" alt="Photo of {{item.name}}">
+				<div class="info">
+					<h2>{{item.name}}</h2>
+					<h3>{{item.reknown}}</h3>
+				</div>
+			</li>
+		</ul>
 	</div>
 </body>
 </html>
