--- a/index.html
+++ b/index.html
@@ -12,8 +12,30 @@
 <body>
 
 	<div class="main" ng-controller="MyController">
+
+		<div class="search">
+			<h1>Artist Directory</h1>
+			<input type="text" name="" id="" autofocus placeholder="Search for an artist" ng-model="query">
+
+			<label class="formgroup">by:
+				<select ng-model="artistOrder">
+					<option value="name">Name</option>
+					<option value="reknown">Reknown</option>
+				</select>
+			</label>
+
+			<label class="formgroup">
+				<input type="radio" ng-model="direction" name="direction" checked>
+				ascending
+			</label>
+			<label class="formgroup">
+				<input type="radio" ng-model="direction" name="direction" value="reverse">
+				descending
+			</label>
+		</div>
+
 		<ul class="artistlist">
-			<li class="artist cf" ng-repeat="item in artists">
+			<li class="artist cf" ng-repeat="item in artists | filter: query | orderBy: artistOrder:direction">
 				<img ng-src="images/{{item.shortname}}_tn.jpg" alt="Photo of {{item.name}}">
 				<div class="info">
 					<h2>{{item.name}}</h2>
