--- a/index.html
+++ b/index.html
@@ -7,20 +7,11 @@
 	<link rel="stylesheet" href="css/style.css">
 
 	<script type="text/javascript" src="bower_components/angular/angular.min.js"></script>
+	<script type="text/javascript" src="bower_components/angular-route/angular-route.min.js"></script>
+	<script type="text/javascript" src="js/app.js"></script>
 	<script type="text/javascript" src="js/controllers.js"></script>
 </head>
 <body>
-
-	<div class="main" ng-controller="MyController">
-		<ul class="artistlist">
-			<li class="artist cf" ng-repeat="item in artists">
-				<img ng-src="images/{{item.shortname}}_tn.jpg" alt="Photo of {{item.name}}">
-				<div class="info">
-					<h2>{{item.name}}</h2>
-					<h3>{{item.reknown}}</h3>
-				</div>
-			</li>
-		</ul>
-	</div>
+	<div class="main" ng-view></div>
 </body>
 </html>
